# auriya

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  Packages.toml  README.md  gamelist.toml  settings.toml  update.json
.cargo/: adb-runner.sh  config.toml
.github/: dependabot.yml
.github/actions/package-module/: action.yml
.github/actions/setup-tools/: action.yml
.github/actions/telegram-notify/: action.yml
.github/scripts/: compile_zip.sh  telegram_bot.sh  telegram_start.sh
.github/workflows/: build.yml  release.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts  signing.properties.example
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_battery.xml  ic_gamepad.xml  ic_github.xml  ic_launcher_foreground.xml  ic_memory.xml  ic_settings.xml  ic_telegram.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/values/: font_certs.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/scripts/: ktlint-precommit.sh
android/service/: build.gradle.kts  proguard-rules.pro
android/service/src/main/: AndroidManifest.xml
android/shared/: build.gradle.kts
docs/: README.md  architecture.md  configuration.md  ipc-reference.md
module/: action.sh  customize.sh  module.prop  service.sh  system.prop  uninstall.sh
src/: ctl.rs  lib.rs  main.rs
src/cli/: app.rs  client.rs  executor.rs  mod.rs  output.rs
src/common/: constanst.rs  mod.rs  types.rs
src/core/: cmd.rs  display.rs  ebpf.rs  io.rs  lmk.rs  mod.rs  pid_tracker.rs  profile.rs  scaling.rs  thermal.rs
src/core/cmd_writer/: mod.rs
src/core/config/: gamelist.rs  mod.rs  packages.rs  path.rs  settings.rs
src/core/dumpsys/: activity.rs  foreground.rs  mod.rs  power.rs  surfaceflinger.rs  window.rs
src/core/fas/: bottleneck.rs  buffer.rs  mod.rs  pid.rs  source.rs  sysfs.rs
src/core/fas/source/: ebpf.rs  mod.rs
src/core/fps_meter/: mod.rs
src/core/frame/: dummy.rs  gpubusy.rs  mod.rs  monitor.rs
src/core/scaling/: mod.rs
src/core/system_status/: mod.rs  watcher.rs
src/core/telemetry/: cpu.rs  gpu.rs  mod.rs  thermal.rs
src/core/thermal/: mod.rs
src/core/tweaks/: battery.rs  ceiling.rs  cpu.rs  gpu.rs  init.rs  memory.rs  mod.rs  mtk.rs  paths.rs  sched.rs  snapdragon.rs  soc.rs  storage.rs  system.rs  touchpanel.rs  vendor_lock.rs
src/daemon/: companion_lock.rs  config.rs  event.rs  fas.rs  ipc.rs  mod.rs  run.rs  state.rs  tick.rs  watcher.rs
src/daemon/ipc/: commands.rs  handlers.rs  server.rs
webui/: .gitignore  index.html  jsconfig.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
webui/src/: App.svelte  app.css  main.js  main.ts  style.css  webui.js  webuix.js
webui/src/components/: About.svelte  Dashboard.svelte  GameSettings.svelte  Games.svelte  Settings.svelte
webui/src/components/ui/: Icon.svelte  Select.svelte  Toast.svelte
webui/src/css/: base.css  components.css  style.css  theme.css  utilities.css
webui/src/lib/: Toast.svelte  actions.js  actions.ts  api.js  api.ts  iconMap.js  iconMap.ts  local.js  local.ts  stores.js  stores.ts
webui/src/lib/locales/: en.json  id.json
webui/src/modules/: easterEgg.js  games.js  navigation.js  settings.js  system.js  theme.js  utils.js
webui/src/views/: About.svelte  Dashboard.svelte  GameSettings.svelte  Games.svelte  Settings.svelte
(+66 files in other folders)
