[package]
name = "auriya"
version = "1.0.4"
edition = "2024"

[workspace]

[lib]
name = "auriya"
path = "src/lib.rs"

[[bin]]
name = "auriya"
path = "src/main.rs"

[[bin]]
name = "auriyactl"
path = "src/ctl.rs"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.102"
notify = "8.2.0"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", default-features = false, features = [
  "rt",
  "net",
  "sync",
  "time",
  "macros",
  "io-util",
  "signal",
  "process",
] }
tracing = { version = "0.1.44", default-features = false, features = [
  "std",
  "attributes",
] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
  "fmt",
  "ansi",
  "env-filter",
  "smallvec",
  "time",
] }
time = { version = "0.3", features = ["formatting"] }
libc = "0.2.186"
clap = { version = "4", features = ["derive", "color", "suggestions"] }
memchr = "2.8.0"
kala = { git = "https://github.com/pavelc4/kala", branch = "main" }


[dev-dependencies]
dhat = "0.3"
tempfile = "3"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[lints.clippy]
# Whole-group dials. Pedantic is opt-in via #[warn] on individual
# items if we ever want to enable it locally; as a workspace-wide
# default it produces too much style noise without catching real bugs.
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
